[gd_scene load_steps=2 format=3 uid="uid://8xxgkjhivle6"]

[ext_resource type="Script" path="res://scripts/guiscripts/death_screen.gd" id="1_n0kj5"]

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_n0kj5")

[node name="ScreenPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverMarginContainer" type="MarginContainer" parent="ScreenPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 86.0
grow_horizontal = 2

[node name="GameOverVerticalContainer" type="VBoxContainer" parent="ScreenPanel/GameOverMarginContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="ScreenPanel/GameOverMarginContainer/GameOverVerticalContainer"]
layout_mode = 2
text = "Game Over!"
horizontal_alignment = 1

[node name="FlavorTextLabel" type="Label" parent="ScreenPanel/GameOverMarginContainer/GameOverVerticalContainer"]
layout_mode = 2
text = "[Flavor Text]"

[node name="ScoreMarginContainer" type="MarginContainer" parent="ScreenPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -120.0
offset_right = 82.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreHorizontalContainer" type="HBoxContainer" parent="ScreenPanel/ScoreMarginContainer"]
layout_mode = 2

[node name="RunScoreLabel" type="Label" parent="ScreenPanel/ScoreMarginContainer/ScoreHorizontalContainer"]
layout_mode = 2
text = "Run Score"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="ScreenPanel/ScoreMarginContainer/ScoreHorizontalContainer"]
layout_mode = 2
text = "High Score"
horizontal_alignment = 1

[node name="ButtonMarginContainer" type="MarginContainer" parent="ScreenPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -240.0
offset_right = 48.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonVerticalContainer" type="VBoxContainer" parent="ScreenPanel/ButtonMarginContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="ScreenPanel/ButtonMarginContainer/ButtonVerticalContainer"]
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="ScreenPanel/ButtonMarginContainer/ButtonVerticalContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ScreenPanel/ButtonMarginContainer/ButtonVerticalContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ScreenPanel/ButtonMarginContainer/ButtonVerticalContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
